--- a/index.html
+++ b/index.html
@@ -11,51 +11,73 @@
 </head>
 
 <body class="index">
+    <!--Inicio Do Header-->
 
-    <div class="headers">
-        <div class="logo">
-            <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo site"></a>
+    <header>
+        <div class="headers">
+            <div class="logo">
+
+                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo site"></a>
+                <!--Logo-->
+            </div>
+            <nav>
+                <div class="menu">
+                    <a id="index" href="index.html">Início</a>
+                    <a id="lanches" href="lanches.html">Lanches</a>
+                    <a id="contato" href="contato.html">Contato</a>
+                    <a id="sobre" href="sobre.html">Sobre</a>
+                </div>
+            </nav>
         </div>
-        <div class="menu">
-            <a id="index" href="index.html">Inicio</a>
-            <a id="produtos" href="produtos.html">Lanches</a>
-            <a id="contato" href="contato.html">Contato</a>
-            <a id="sobre" href="sobre.html">Sobre</a>
+        <div class="banner-f">
+            <div class="banner">
+                <!--A imagem do banner se encontra no CSS-->
+
+            </div>
         </div>
-    </div>
-    <div class="banner-f">
-        <div class="banner">
+    </header>
+    <!--Fim Do Header-->
 
-        </div>
-    </div>
-    <div class="container">
-        <div class="conteudo-1">
+    <main>
+        <section>
 
-            <h1>Junnin's Burguer</h1>
-            <p> Sinônimo de qualidade e eficiência, a <span>Junnin's Burguer </span> é uma tipica lanchonete
-                Taquaritinguense. Fundada em 2021, a lanchonete com seu clima descontraído e bom atendimento, logo
-                ganhou
-                a simpatia das pessoas e passou a ser um ponto de refêrencia na cidade.</p>
-            <p> Temos como missão servir com
-                simpatia, alimentos saborosos e de qualidade proporcionando satisfação e bem
-                estar aos clientes, visando ser refêrencia como lanchonete de lanches caseiros para a cidade toda.
-            </p>
+                <h1 id="titulo"> Saboreie a expêriencia dos lanches Junnin's</h1>
 
-        </div>
-        <div class="conteudo-2">
-            <img src="Imagens/Foto-conteudo.jpg" alt="">
+            <div class="conteudo-inicio">
 
-        </div>
+                <div id="img1">
+                    <img src="/Imagens/Hamburguer-7.png" alt="">
+                    <h3>J-Whim</h3>
+                    <p> Pão, 2 hamburguer, tomate, alface, 2 queijo cheddar </p>
 
-    </div>
+                </div>
+
+                <div id="img2">
+                    <img src="/Imagens/Hamburguer-8.png" alt="">
+                    <h3>J-WhopperX</h3>
+                    <p> Pão, hamburguer, tomate, alface, queijo, molho barbecue </p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer1">
         <div class="container_logo">
             <div class="footer__logo">
 
                 <a class="link-footer" href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo do site"></a>
             </div>
+            <nav>
+                <div class="redes-footer">
 
 
+                    <!-- 
+                <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
+                <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
+                    alt=""></a>
+                <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a> -->
+
+                </div>
+            </nav>
             <div class="footer_contato">
 
                 <p class="f-telefone"><span>Delivery:</span>(16) 99964-9810</p>
