--- a/lanches.html
+++ b/lanches.html
@@ -14,28 +14,24 @@
     <header>
         <div class="headers">
             <div class="logo">
-
-                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo do site"></a>
+                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo site"></a>
             </div>
             <nav>
                 <div class="menu">
-                    <a id="index" href="index.html">Início</a>
+                    <a id="index" href="index.html">Inicio</a>
                     <a id="lanches" href="lanches.html">Lanches</a>
                     <a id="contato" href="contato.html">Contato</a>
                     <a id="sobre" href="sobre.html">Sobre</a>
                 </div>
             </nav>
-            </nav>
         </div>
-
         <div class="banner-f">
             <div class="banner">
-
 
             </div>
         </div>
     </header>
-    <main>
+    <main id="conteudo-lanches">
         <section>
             <div class="cont-lanches" alt="Conteudo-lanches">
                 <div class="cont-1">
@@ -91,7 +87,7 @@
                 <div class="cont-1">
                     <img src="Imagens/Hamburguer-7.png" alt="lanche-1">
                     <div class="card-1">
-                        <h3>J-Car</h3>
+                        <h3>J-whim</h3>
                         <p> Pão, hamburguer de frango, salada de repolho cenoura, molho barbecue </p>
                         <span class="money">R$ 22,50</span>
                     </div>
