--- a/sobre.html
+++ b/sobre.html
@@ -11,39 +11,60 @@
 
 <body class="sobre">
 
-  <div class="headers">
-    <div class="logo">
-      <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo do site"></a>
+  <!--Inicio Do Header-->
+
+  <header>
+    <div class="headers">
+      <div class="logo">
+
+        <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo site"></a>
+        <!--Logo-->
+      </div>
+      <nav>
+        <div class="menu">
+            <a id="index" href="index.html">Início</a>
+            <a id="lanches" href="lanches.html">Lanches</a>
+            <a id="contato" href="contato.html">Contato</a>
+            <a id="sobre" href="sobre.html">Sobre</a>
+        </div>
+    </nav>
     </div>
-    <div class="menu">
+    <div class="banner-f">
+      <div class="banner">
+        <!--A imagem do banner se encontra no CSS-->
 
-      <a id="index" class="link" href="index.html">Inicio</a>
-      <a id="produtos" class="link" href="produtos.html">Lanches</a>
-      <a id="contato" class="link" href="contato.html">Contato</a>
-      <a id="sobre" class="link" href="sobre.html">Sobre</a>
-
+      </div>
     </div>
-  </div>
-  <div class="banner-f">
-    <div class="banner">
+  </header>
+  <!--Fim Do Header-->
+  <main>
+    <section>
+      <div id="section-sobre">
+        <div class="conteudo-1">
 
-    </div>
-  </div>
+          <h1>Junnin's Burguer</h1>
+          <p> Sinônimo de qualidade e eficiência, a <span>Junnin's Burguer </span> é uma tipica lanchonete
+            Taquaritinguense. Fundada em 2021, a lanchonete com seu clima descontraído e bom atendimento,
+            logo
+            ganhou
+            a simpatia das pessoas e passou a ser um ponto de refêrencia na cidade.</p>
+          <p> Temos como missão servir com
+            simpatia, alimentos saborosos e de qualidade proporcionando satisfação e bem
+            estar aos clientes, visando ser refêrencia como lanchonete de lanches caseiros para a cidade
+            toda.
+          </p>
 
-
-  <section id="section-sobre">
-    <div class="container-sobre">
-
-      <h1>Equipe de Colaboradores</h1>
-      <p>Por trás de uma boa equipe de trabalho está um espírito de união capaz de alcançar os resultados mais
-        incríveis.</p>
-      <p>Trabalhar em equipe é saber lutar em conjunto por um mesmo objetivo. Nem sempre é fácil manter a união e a
-        concordância entre todos quando uma equipe é composta por diferentes individualidades.</p>
-      <p>Mas é importante saber separar o que é individual do que é de interesse para o grupo. A vitória apenas será
-        alcançada se todos se unirem e trabalharem em conjunto. No final todo sacrifício valerá a pena e sei que
-        pequenos desentendimentos serão esquecidos.</p>
-
-    </div>
+          <h1>Equipe de Colaboradores</h1>
+          <p>Por trás de uma boa equipe de trabalho está um espírito de união capaz de alcançar os resultados mais
+            incríveis.</p>
+          <p>Trabalhar em equipe é saber lutar em conjunto por um mesmo objetivo. Nem sempre é fácil manter a união e a
+            concordância entre todos quando uma equipe é composta por diferentes individualidades.</p>
+          <p>Mas é importante saber separar o que é individual do que é de interesse para o grupo. A vitória apenas será
+            alcançada se todos se unirem e trabalharem em conjunto. No final todo sacrifício valerá a pena e sei que
+            pequenos desentendimentos serão esquecidos.</p>
+        </div>
+      </div>
+    </section>
 
 
     <div class="conteiner-team">
@@ -130,9 +151,9 @@
         </div>
       </div>
     </div>
-  </section>
+    </section>
 
-
+  </main>
   <footer class="footer1">
     <div class="container_logo">
       <div class="footer__logo">
