--- a/contato.html
+++ b/contato.html
@@ -58,7 +58,7 @@
                         <span id="resultado-lcel"></span>
 
                         <label for="lemail">E-mail:</label>
-                        <input type="email" id="lemail" name="lemail" placeholder="(exemplo@exemplo.com)"
+                        <input type="email" id="lemail" name="lemail" placeholder="Escreva seu e-mail (exemplo@exemplo.com)"
                             onblur="validacaoEmail(formulario.lemail)" maxlength="60" size='65' required>
                         <span id="resultado-email"></span>
 
