--- a/index.html
+++ b/index.html
@@ -39,48 +39,44 @@
     <!--Fim Do Header-->
 
     <main>
-        <section>
+        <section id="campo1">
 
-                <h1 id="titulo"> Saboreie a expêriencia dos lanches Junnin's</h1>
+            <h1 id="titulo"> Saboreie a expêriencia dos lanches Junnin's</h1>
 
-            <div class="conteudo-inicio">
+            <div class="conteudo">
+                <div class="conteudo-inicio">
 
-                <div id="img1">
-                    <img src="/Imagens/Hamburguer-7.png" alt="">
-                    <h3>J-Whim</h3>
-                    <p> Pão, 2 hamburguer, tomate, alface, 2 queijo cheddar </p>
 
+                    <div id="img1">
+                        <a href="./lanches.html"> <img src="/Imagens/Hamburguer-7.png" alt=""></a>
+                        <h3>J-WhopperX</h3>
+                        <p> Pão, frango, salada da casa, pate de alho, maionese  </p>
+                    </div>
                 </div>
+                <div class="conteudo-inicio">
 
-                <div id="img2">
-                    <img src="/Imagens/Hamburguer-8.png" alt="">
-                    <h3>J-WhopperX</h3>
-                    <p> Pão, hamburguer, tomate, alface, queijo, molho barbecue </p>
+
+                    <div id="img2">
+                        <a href="./lanches.html"> <img src="/Imagens/Hamburguer-8.png" alt=""></a>
+                        <h3>J-WhopperX</h3>
+                        <p>Pão, hamburguer, cebola roxa, tomate, alface, palmito, molho de beterraba </p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
     <footer class="footer1">
         <div class="container_logo">
             <div class="footer__logo">
 
-                <a class="link-footer" href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo do site"></a>
+                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo do site"></a>
             </div>
-            <nav>
-                <div class="redes-footer">
 
 
-                    <!-- 
-                <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
-                <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
-                    alt=""></a>
-                <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a> -->
-
-                </div>
-            </nav>
             <div class="footer_contato">
 
-                <p class="f-telefone"><span>Delivery:</span>(16) 99964-9810</p>
+                <p class="f-telefone"><span>Delivery: </span> (16) 99964-9810</p>
                 <p class="f-email"><span>E-mail:</span> junninsburguer@burguer.com</p>
 
             </div>
