--- a/lanches.html
+++ b/lanches.html
@@ -38,7 +38,7 @@
                     <img src="Imagens/Hamburguer-1.png" alt="lanche-1">
                     <div class="card-1">
                         <h3>J-DuploX</h3>
-                        <p> Pão, 2 hamburguer, tomate, alface, 2 queijo cheddar </p>
+                        <p> Pão, 2 hamburguer, tomate, alface, 2 queijo cheddar, bacon</p>
                         <span class="money">R$ 25,00</span>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     <img src="Imagens/Hamburguer-2.png" alt="lanche-2">
                     <div class="card-1">
                         <h3>J-WhopperX</h3>
-                        <p> Pão, hamburguer, tomate, alface, queijo, molho branco, molho barbecue </p>
+                        <p> Pão, hamburguer, nuggets, alface, maionese, queijo, bacon  </p>
                         <span class="money">R$ 18,00</span>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                     <img src="Imagens/Hamburguer-3.png" alt="lanche-3">
                     <div class="card-1">
                         <h3>J-MegaX</h3>
-                        <p> Pão, hamburguer, couve refogada com cebola roxa , queijo e bacon </p>
+                        <p> Pão, hamburguer, salada brasileira, queijo gorgonzola, bacon </p>
                         <span class="money">R$ 19,00</span>
                     </div>
                 </div>
@@ -63,8 +63,7 @@
                     <img src="Imagens/Hamburguer-4.png" alt="lanche-1">
                     <div class="card-1">
                         <h3>J-RapBig</h3>
-                        <p> Pão, hamburguer, repolho, alface , cheddar, molho branco, queijo
-                        </p>
+                        <p> Pão, stick, repolho, cheddar, patê, alface</p>
                         <span class="money">R$17,00</span>
                     </div>
                 </div>
@@ -72,7 +71,7 @@
                     <img src="Imagens/Hamburguer-5.png" alt="lanche-2">
                     <div class="card-1">
                         <h3>J-Grill</h3>
-                        <p> Pão, hamburguer, tomate, pepino, rucula, molho branco </p>
+                        <p> Pão, hamburguer de kafta, couve refogada, purê de batata, bacon </p>
                         <span class="money">R$ 16,50</span>
                     </div>
                 </div>
@@ -80,7 +79,7 @@
                     <img src="Imagens/Hamburguer-6.png" alt="lanche-3">
                     <div class="card-1">
                         <h3>J-Huck</h3>
-                        <p> Pão, hamburguer, tomate, rucula, queijo, stick, maionese </p>
+                        <p> Pão, hamburguer, tomate, rucula, queijo, maionese, bacon  </p>
                         <span class="money">R$ 18,50</span>
                     </div>
                 </div>
@@ -88,7 +87,7 @@
                     <img src="Imagens/Hamburguer-7.png" alt="lanche-1">
                     <div class="card-1">
                         <h3>J-whim</h3>
-                        <p> Pão, hamburguer de frango, salada de repolho cenoura, molho barbecue </p>
+                        <p> Pão, frango, salada da casa, pate de alho, maionese  </p>
                         <span class="money">R$ 22,50</span>
                     </div>
                 </div>
@@ -96,7 +95,7 @@
                     <img src="Imagens/Hamburguer-8.png" alt="lanche-2">
                     <div class="card-1">
                         <h3>J-Degust Grill</h3>
-                        <p> Pão, hamburguer, tomate, alface, molho barbecue , cebola roxa, beterraba </p>
+                        <p> Pão, hamburguer, cebola, tomate, alface, palmito, molho de beterraba</p>
                         <span class="money">R$ 23,50</span>
                     </div>
                 </div>
@@ -104,7 +103,7 @@
                     <img src="Imagens/Hamburguer-9.png" alt="lanche-3">
                     <div class="card-1">
                         <h3>Ju Gostosão</h3>
-                        <p> Pão, alface, bacon, hamburguer, tomate, picles, molho barbecue </p>
+                        <p> Pão, hamburguer, alface, tomate, bacon, picles, molho barbecue </p>
                         <span class="money">R$ 25,50</span>
                     </div>
                 </div>
