--- a/lanches.html
+++ b/lanches.html
@@ -14,7 +14,7 @@
     <header>
         <div class="headers">
             <div class="logo">
-                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="logo site"></a>
+                <a href="index.html"> <img src="Imagens/LogoJuOficial.png" alt="imagem logo"></a>
             </div>
             <nav>
                 <div class="menu">
@@ -33,7 +33,7 @@
     </header>
     <main id="conteudo-lanches">
         <section>
-            <div class="cont-lanches" alt="Conteudo-lanches">
+            <div class="cont-lanches" >
                 <div class="cont-1">
                     <img src="Imagens/Hamburguer-1.png" alt="lanche-1">
                     <div class="card-1">
@@ -46,7 +46,7 @@
                     <img src="Imagens/Hamburguer-2.png" alt="lanche-2">
                     <div class="card-1">
                         <h3>J-WhopperX</h3>
-                        <p> Pão, hamburguer, nuggets, alface, maionese, queijo, bacon  </p>
+                        <p> Pão, hamburguer, nuggets, alface, maionese, queijo, bacon </p>
                         <span class="money">R$ 18,00</span>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <img src="Imagens/Hamburguer-6.png" alt="lanche-3">
                     <div class="card-1">
                         <h3>J-Huck</h3>
-                        <p> Pão, hamburguer, tomate, rucula, queijo, maionese, bacon  </p>
+                        <p> Pão, hamburguer, tomate, rucula, queijo, maionese, bacon </p>
                         <span class="money">R$ 18,50</span>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                     <img src="Imagens/Hamburguer-7.png" alt="lanche-1">
                     <div class="card-1">
                         <h3>J-whim</h3>
-                        <p> Pão, frango, salada da casa, pate de alho, maionese  </p>
+                        <p> Pão, frango, salada da casa, pate de alho, maionese </p>
                         <span class="money">R$ 22,50</span>
                     </div>
                 </div>
