--- a/sobre.html
+++ b/sobre.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/text.css" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <link rel="stylesheet" href="css/text.css" >
 
   <title>Lanchonete-Sobre</title>
 </head>
@@ -70,17 +70,17 @@
     <div class="conteiner-team">
       <div class="team_box">
 
-        <img src="Imagens/boneco3.png">
+        <img src="Imagens/boneco3.png" alt="boneco1">
 
 
         <div class="nm">Alexandre Tripodi</div>
         <label class="prfl">Garçom </label>
         <div class="redes">
 
-          <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
-          <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
+          <a target="_blank" href="https://www.facebook.com/"><img  src="Imagens/facebook.svg" alt=""></a>
+          <a target="_blank" href="https://www.instagram.com/"><img  src="Imagens/instagram-logo.svg"
               alt=""></a>
-          <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a>
+          <a target="_blank" href="https://web.whatsapp.com/"><img  src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
 
@@ -89,16 +89,16 @@
 
       <div class="team_box">
 
-        <img src="Imagens/boneco5.png">
+        <img src="Imagens/boneco5.png" alt="boneco2">
 
         <div class="nm">Gerson</div>
         <label class="prfl">Chapeiro</label>
         <div class="redes">
 
-          <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
-          <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
+          <a target="_blank" href="https://www.facebook.com/"><img  src="Imagens/facebook.svg" alt=""></a>
+          <a target="_blank" href="https://www.instagram.com/"><img  src="Imagens/instagram-logo.svg"
               alt=""></a>
-          <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a>
+          <a target="_blank" href="https://web.whatsapp.com/"><img  src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
       </div>
@@ -106,39 +106,39 @@
 
       <div class="team_box">
 
-        <img src="Imagens/boneca.png">
+        <img src="Imagens/boneca.png" alt="boneco3">
 
 
         <div class="nm">Deise Cristina</div>
         <label class="prfl">Atendente</label>
         <div class="redes">
 
-          <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
-          <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
+          <a target="_blank" href="https://www.facebook.com/"><img  src="Imagens/facebook.svg" alt=""></a>
+          <a target="_blank" href="https://www.instagram.com/"><img src="Imagens/instagram-logo.svg"
               alt=""></a>
-          <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a>
+          <a target="_blank" href="https://web.whatsapp.com/"><img  src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
       </div>
 
       <div class="team_box">
 
-        <img src="Imagens/boneco1.png">
+        <img src="Imagens/boneco1.png" alt="boneco4">
 
 
         <div class="nm">Paulo Morais</div>
         <label class="prfl">Motoboy</label>
         <div class="redes">
 
-          <a target="_blank" href="https://www.facebook.com/"><img href="#" src="Imagens/facebook.svg" alt=""></a>
-          <a target="_blank" href="https://www.instagram.com/"><img href="#" src="Imagens/instagram-logo.svg"
+          <a target="_blank" href="https://www.facebook.com/"><img src="Imagens/facebook.svg" alt=""></a>
+          <a target="_blank" href="https://www.instagram.com/"><img  src="Imagens/instagram-logo.svg"
               alt=""></a>
-          <a target="_blank" href="https://web.whatsapp.com/"><img href="#" src="Imagens/whatsapp.svg" alt=""></a>
+          <a target="_blank" href="https://web.whatsapp.com/"><img src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
       </div>
-    
-    </section>
+    </div>
+   
 
   </main>
   <footer class="footer1">
