--- a/sobre.html
+++ b/sobre.html
@@ -87,7 +87,7 @@
       </div>
 
 
-      <div class="team_box">
+      <!-- <div class="team_box">
 
         <img src="Imagens/boneco5.png" alt="boneco2">
 
@@ -101,10 +101,10 @@
           <a target="_blank" href="https://web.whatsapp.com/"><img  src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
-      </div>
+      </div> -->
 
 
-      <div class="team_box">
+      <!-- <div class="team_box">
 
         <img src="Imagens/boneca.png" alt="boneco3">
 
@@ -119,7 +119,7 @@
           <a target="_blank" href="https://web.whatsapp.com/"><img  src="Imagens/whatsapp.svg" alt=""></a>
 
         </div>
-      </div>
+      </div> -->
 
       <div class="team_box">
 
